--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /sites/*/*services*.yml
 
 # Ignore paths that may contain user-generated content
-#/sites/*/files
+/sites/*/files
 /sites/*/public
 /sites/*/private
 /sites/*/files-public
