--- a/themes/yg_sports/yg_sports.libraries.yml
+++ b/themes/yg_sports/yg_sports.libraries.yml
@@ -6,6 +6,7 @@ global-styling:
       css/font-awesome/css/font-awesome.min.css: {}
       css/nivo-lightbox/nivo-lightbox.css: {}
       css/nivo-lightbox/default.css: {}
+      css/flexslider_img.css: {}
       
   js:
     js/nivo-lightbox.js: {}
