Aujstes CSS e modulo views autocomplete
Aujstes CSS e modulo views autocomplete

--- a/themes/yg_sports/yg_sports.info.yml
+++ b/themes/yg_sports/yg_sports.info.yml
@@ -9,6 +9,9 @@ core_version_requirement: ^8 || ^9
   
 
 regions:
+  top_left: 'top left'
+  top_center: 'top center'
+  top_right: 'top right'
   navigation: 'Navigation'
   navigation_collapsible: 'Navigation (Collapsible)'
   header: 'Top Bar'
