--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/pathauto": "^1.8",
         "drupal/token": "^1.9",
         "drupal/twig_tweak": "^3.0",
+        "drupal/views_autocomplete_filters": "^1.3",
         "drupal/webform": "^6.0",
         "drush/drush": "^10.4",
         "woocommerce/flexslider": "~2.0"
